--- a/backend/templates/wonderland-book/manifest.json
+++ b/backend/templates/wonderland-book/manifest.json
@@ -24,6 +24,7 @@
             "box_w": 547,
             "box_h": 268,
             "top": 80,
+            "line_height": 110,
             "margin_left": 266,
             "text_align": "center",
             "font_size": 100,
@@ -57,7 +58,7 @@
           "style": {
             "box_w": 431,
             "box_h": 541,
-            "top": 256,
+            "top": 320,
             "line_height": 55,
             "margin_left": 366,
             "text_align": "center",
@@ -89,6 +90,7 @@
             "text_align": "left",
             "allow_title_html": true,
             "font_size": 40,
+            "line_height": 55,
             "color": "#ffffff",
             "shadow_color": "0,0,0",
             "shadow_opacity": 0.5,
@@ -143,6 +145,7 @@
             "text_align": "right",
             "allow_title_html": true,
             "font_size": 40,
+            "line_height": 55,
             "color": "#ffffff",
             "shadow_color": "0,0,0",
             "shadow_opacity": 0.5,
@@ -177,6 +180,7 @@
             "text_align": "left",
             "allow_title_html": true,
             "font_size": 40,
+            "line_height": 55,
             "color": "#ffffff",
             "shadow_color": "0,0,0",
             "shadow_opacity": 0.5,
@@ -211,6 +215,7 @@
             "text_align": "right",
             "allow_title_html": true,
             "font_size": 40,
+            "line_height": 55,
             "color": "#ffffff",
             "shadow_color": "0,0,0",
             "shadow_opacity": 0.5,
@@ -245,6 +250,7 @@
             "text_align": "left",
             "allow_title_html": true,
             "font_size": 40,
+            "line_height": 55,
             "color": "#ffffff",
             "shadow_color": "0,0,0",
             "shadow_opacity": 0.5,
@@ -279,6 +285,7 @@
             "text_align": "center",
             "allow_title_html": true,
             "font_size": 40,
+            "line_height": 55,
             "color": "#ffffff",
             "shadow_color": "0,0,0",
             "shadow_opacity": 0.5,
@@ -313,6 +320,7 @@
             "text_align": "left",
             "allow_title_html": true,
             "font_size": 40,
+            "line_height": 55,
             "color": "#ffffff",
             "shadow_color": "0,0,0",
             "shadow_opacity": 0.5,
@@ -357,6 +365,7 @@
             "text_align": "left",
             "allow_title_html": true,
             "font_size": 40,
+            "line_height": 55,
             "color": "#ffffff",
             "shadow_color": "0,0,0",
             "shadow_opacity": 0.5,
@@ -391,6 +400,7 @@
             "text_align": "right",
             "allow_title_html": true,
             "font_size": 40,
+            "line_height": 55,
             "color": "#ffffff",
             "shadow_color": "0,0,0",
             "shadow_opacity": 0.5,
@@ -425,6 +435,7 @@
             "text_align": "center",
             "allow_title_html": true,
             "font_size": 40,
+            "line_height": 55,
             "color": "#ffffff",
             "shadow_color": "0,0,0",
             "shadow_opacity": 0.5,
@@ -459,6 +470,7 @@
             "text_align": "right",
             "allow_title_html": true,
             "font_size": 40,
+            "line_height": 55,
             "color": "#ffffff",
             "shadow_color": "0,0,0",
             "shadow_opacity": 0.5,
@@ -493,6 +505,7 @@
             "text_align": "left",
             "allow_title_html": true,
             "font_size": 40,
+            "line_height": 55,
             "color": "#ffffff",
             "shadow_color": "0,0,0",
             "shadow_opacity": 0.5,
@@ -527,6 +540,7 @@
             "text_align": "right",
             "allow_title_html": true,
             "font_size": 40,
+            "line_height": 55,
             "color": "#ffffff",
             "shadow_color": "0,0,0",
             "shadow_opacity": 0.5,
@@ -561,6 +575,7 @@
             "text_align": "left",
             "allow_title_html": true,
             "font_size": 40,
+            "line_height": 55,
             "color": "#ffffff",
             "shadow_color": "0,0,0",
             "shadow_opacity": 0.5,
@@ -605,6 +620,7 @@
             "text_align": "left",
             "allow_title_html": true,
             "font_size": 40,
+            "line_height": 55,
             "color": "#ffffff",
             "shadow_color": "0,0,0",
             "shadow_opacity": 0.5,
@@ -659,6 +675,7 @@
             "text_align": "right",
             "allow_title_html": true,
             "font_size": 40,
+            "line_height": 55,
             "color": "#ffffff",
             "shadow_color": "0,0,0",
             "shadow_opacity": 0.5,
@@ -693,6 +710,7 @@
             "text_align": "left",
             "allow_title_html": true,
             "font_size": 40,
+            "line_height": 55,
             "color": "#ffffff",
             "shadow_color": "0,0,0",
             "shadow_opacity": 0.5,
@@ -727,6 +745,7 @@
             "text_align": "left",
             "allow_title_html": true,
             "font_size": 40,
+            "line_height": 55,
             "color": "#ffffff",
             "shadow_color": "0,0,0",
             "shadow_opacity": 0.5,
@@ -761,6 +780,7 @@
             "text_align": "left",
             "allow_title_html": true,
             "font_size": 40,
+            "line_height": 55,
             "color": "#ffffff",
             "shadow_color": "0,0,0",
             "shadow_opacity": 0.5,
@@ -795,6 +815,7 @@
             "text_align": "right",
             "allow_title_html": true,
             "font_size": 40,
+            "line_height": 55,
             "color": "#ffffff",
             "shadow_color": "0,0,0",
             "shadow_opacity": 0.5,
@@ -840,6 +861,7 @@
             "text_align": "right",
             "allow_title_html": true,
             "font_size": 40,
+            "line_height": 55,
             "color": "#ffffff",
             "shadow_color": "0,0,0",
             "shadow_opacity": 0.5,
@@ -874,6 +896,7 @@
             "text_align": "center",
             "allow_title_html": true,
             "font_size": 40,
+            "line_height": 55,
             "color": "#ffffff",
             "shadow_color": "0,0,0",
             "shadow_opacity": 0.5,
@@ -908,6 +931,7 @@
             "text_align": "center",
             "allow_title_html": true,
             "font_size": 40,
+            "line_height": 55,
             "color": "#ffffff",
             "shadow_color": "0,0,0",
             "shadow_opacity": 0.5,
