Add RunPod deployment setup for ComfyUI face swap workflow
- Add Dockerfile.runpod with multi-stage build (Ubuntu 22.04 + Python 3.12 + CUDA 12.4)
- Add start.runpod.sh startup script with venv and custom nodes setup
- Add extra_model_paths.yaml for Network Volume model paths
- Add download_models.sh script for one-time model download (~15GB)
- Add docker-compose.local.yml for local development with MinIO
- Add GitHub Actions workflow for Docker Hub publishing
- Add backend/.env.local template for local development

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "reference/wonder_wraps_copy"]
 	path = reference/wonder_wraps_copy
 	url = git@github.com:PidgoreckiyNestor/wonder_wraps_copy.git
+[submodule "reference/Comfy"]
+	path = reference/Comfy
+	url = https://github.com/runpod-workers/comfyui-base.git
