--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,16 +1,26 @@
-FROM python:3.11-slim
+FROM python:3.11-slim-bookworm
+
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    DEBIAN_FRONTEND=noninteractive \
+    TZ=UTC
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libglib2.0-0 libgl1 \
+    build-essential g++ gcc \
+    tzdata \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
-# System dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    libglib2.0-0 libgl1 \
-    && rm -rf /var/lib/apt/lists/*
+COPY requirements.dev.txt .
+RUN pip install --no-cache-dir --timeout=300 -r requirements.dev.txt
 
-# Python dependencies (without GPU-specific packages)
-COPY requirements-dev.txt .
-RUN pip install --no-cache-dir -r requirements-dev.txt
+# Install Chromium + OS deps for Playwright (used for HTML->PNG text rendering).
+RUN python -m playwright install --with-deps chromium
 
 COPY . .
 
-CMD ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+EXPOSE 8000
+
+CMD ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
